# arch_project

HabitsService/: .gitignore  HabitsService.sln
HabitsService/HabitsServiceApi/: HabitsServiceApi.csproj  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json
HabitsService/HabitsServiceApi.Tests/: HabitsServiceApi.Tests.csproj  HabitsServiceApiTest.cs  UnitTest1.cs
HabitsService/ServiceRegistry.Client/: Client.cs
RabbitWrapper/: Message.cs  RabbitWrapper.csproj  Wrapper.cs
ReportsService/: build.gradle.kts  settings.gradle
ServiceRegistry/: .gitignore  DictionaryWrapper.fs  HealthCheckingService.fs  Models.fs  Program.fs  Router.fs  ServiceDb.fs  ServiceRegistry.fsproj
ServiceRegistry.Client/: Client.cs  Models.cs
auth_service/: .gitignore  Cargo.toml
auth_service/src/: main.rs
auth_service/src/db_worker/: mod.rs
auth_service/src/handlers/: mod.rs
auth_service/src/models/: mod.rs  token.rs  user.rs  user_minimal.rs  user_view.rs
auth_service/src/state/: mod.rs
auth_service/src/user/: mod.rs  user.rs  user_view.rs
diagrams/: deployment.puml
endpoint_definition/: auth_service_swagger.yaml  habits_service_swagger.yaml  reporting_service_swagger.yaml
front/: package-lock.json  package.json
front/src/: App.vue  router.ts
serviceRegistryClient/: package.json  tsconfig.json
service_registry_client/: Cargo.toml
service_registry_client/src/: lib.rs
taskServices/: map.txt  package-lock.json  package.json  tsconfig.json
taskServices/src/: app.ts  clientSR.ts  health.ts  models.ts  rabbitMessages.ts  tasks.ts
(+76 files in other folders)
